add binar design component

--- a/gold/ch-3/top-4/index.html
+++ b/gold/ch-3/top-4/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="text">Media Query</div>
-    <!-- <div>
+    <div>
       <strong>Teks Tebal</strong>
       <small>Teks Kecil</small>
-    </div> -->
+    </div>
   </body>
 </html>
