add search banner case

--- a/gold/ch-3/top-4/binar-car.html
+++ b/gold/ch-3/top-4/binar-car.html
@@ -16,5 +16,18 @@
       </div>
       <button class="sewaButton">Mulai Sewa Mobil</button>
     </div>
+    <div style="height: 200px; background-color: blue"></div>
+    <div style="height: 200px; background-color: red; position: relative">
+      <div
+        style="
+          width: 50%;
+          height: 100px;
+          background-color: green;
+          position: absolute;
+          top: -50px;
+          left: 25%;
+        "
+      ></div>
+    </div>
   </body>
 </html>
