--- a/gold/flexbox/index.html
+++ b/gold/flexbox/index.html
@@ -8,57 +8,61 @@
     />
   </head>
   <body>
-    <div class="card">
-      <img class="card-icon" src="./icon_complete.png" alt="icon-complete" />
-      <div class="card-title">Mobil Lengkap</div>
-      <div class="card-desc">
-        Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat
+    <div>Why Us</div>
+    <div>Mengapa harus pilih Binar Car Rental?</div>
+    <div class="card-container">
+      <div class="card">
+        <img class="card-icon" src="./icon_complete.png" alt="icon-complete" />
+        <div class="card-title">Mobil Lengkap</div>
+        <div class="card-desc">
+          Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-icon" src="./icon_price.png" alt="icon-price" />
-      <div class="card-title">Harga Murah</div>
-      <div class="card-desc">
-        Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil
-        lain
+      <div class="card">
+        <img class="card-icon" src="./icon_price.png" alt="icon-price" />
+        <div class="card-title">Harga Murah</div>
+        <div class="card-desc">
+          Harga murah dan bersaing, bisa bandingkan harga kami dengan rental
+          mobil lain
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img class="card-icon" src="./icon_24hrs.png" alt="icon-24-hrs" />
-      <div class="card-title">Layanan 24 Jam</div>
-      <div class="card-desc">
-        Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia
-        di akhir minggu
+      <div class="card">
+        <img class="card-icon" src="./icon_24hrs.png" alt="icon-24-hrs" />
+        <div class="card-title">Layanan 24 Jam</div>
+        <div class="card-desc">
+          Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia
+          di akhir minggu
+        </div>
       </div>
-    </div>
-    <div class="card">
-      <img
-        class="card-icon"
-        src="./icon_professional.png"
-        alt="icon-professional"
-      />
-      <div class="card-title">Sopir Profesional</div>
-      <div class="card-desc">
-        Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat
-        waktu
+      <div class="card">
+        <img
+          class="card-icon"
+          src="./icon_professional.png"
+          alt="icon-professional"
+        />
+        <div class="card-title">Sopir Profesional</div>
+        <div class="card-desc">
+          Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat
+          waktu
+        </div>
       </div>
     </div>
     <hr />
     <div class="footer">
-      <div class="contact-info">
+      <div class="footer-section bold">
         <div>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</div>
         <div>binarcarrental@gmail.com</div>
         <div>081-233-334-808</div>
       </div>
-      <div class="navigation">
+      <div class="footer-section navigation">
         <div>Our services</div>
         <div>Why Us</div>
         <div>Testimonial</div>
         <div>FAQ</div>
       </div>
-      <div class="social-media">
+      <div class="footer-section bold">
         <div>Connect with us</div>
-        <div>
+        <div class="social-media">
           <img src="./icon_facebook.png" alt="icon-facebook" />
           <img src="./icon_instagram.png" alt="icon-instagram" />
           <img src="./icon_twitter.png" alt="icon-twitter" />
@@ -66,7 +70,7 @@
           <img src="./icon_twitch.png" alt="icon-twitch" />
         </div>
       </div>
-      <div class="copyright">
+      <div class="footer-section bold">
         <div>Copyright Binar 2022</div>
         <div class="block"></div>
       </div>
